@@ -1,3 +1,7 @@
+2005-11-17  Miklos Szeredi <miklos@szeredi.hu>
+
+	* More FreeBSD merge
+
 2005-11-16  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Merge library part of FreeBSD port.  Patch by Csaba Henk
